# sudoku

./: CMakeLists.txt  Game.cpp  Game.h  README.md  main.cpp
Objects/Player/: Player.cpp  Player.h
Objects/Sudoku/: Sudoku.cpp  Sudoku.h
doc/source/: conf.py  game.rst  player.rst
settings/: settigs.h  settings.h
tests/: testGame.cpp  testPrint.cpp  testyPlayer.cpp  testySudoku.cpp
tools/: checking.cpp  common.cpp
visual/: Print.cpp  Print.h
